<resources>
    <string name="app_name">CoffeeCounter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="stats_activity">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="stat_activity">Statistics</string>
    <string name="new_item_activity">Add item</string>

    <string name="add_item_button">Add item</string>
    <string name="item_search_hint">Input coffee type</string>
    <string name="caffeine">Caffeine</string>
    <string name="mg">mg</string>
    <string name="amount">Amount</string>

    <string name="ok_button">OK</string>
    <string name="remove_button">Remove</string>
    <string name="details">Details:</string>
    <string name="count">Count</string>
    <string name="total">Total</string>
    <string name="item_count">pc</string>
    <string name="item_added">Item added</string>

    <string name="coffee_linechart_header">Caffeine by day</string>
    <string name="coffee_barchart_header">Cups of coffee by day</string>
    <string name="piechart_title">Coffee consumption\nby type</string>
</resources>